cloudformation/prometheus/promserver.yml
Description: >
  Prometheus Server for Monitoring

Parameters:
  WorkflowID:
    Description: Unique identifier.
    Type: String

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Prometheus-UdaPeople
      GroupDescription: Allow ports 22, 9090, 9093 and port 9100
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9090
          ToPort: 9090
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9093
          ToPort: 9093
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9100
          ToPort: 9100
          CidrIp: 0.0.0.0/0
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SecurityGroups:
        - Ref: InstanceSecurityGroup
      KeyName: udapeople
      ImageId: ami-06878d265978313ca
      Tags:
        - Key: Name
          Value: !Sub PrometheusServer-UdaPeople
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            sudo apt-get update
            sudo apt-get upgrade
            sudo useradd --no-create-home prometheus
            sudo mkdir /etc/prometheus
            sudo mkdir /var/lib/prometheus
            wget https://github.com/prometheus/prometheus/releases/download/v2.19.0/prometheus-2.19.0.linux-amd64.tar.gz
            tar xvfz prometheus-2.19.0.linux-amd64.tar.gz
            sudo cp prometheus-2.19.0.linux-amd64/prometheus /usr/local/bin
            sudo cp prometheus-2.19.0.linux-amd64/promtool /usr/local/bin/
            sudo cp -r prometheus-2.19.0.linux-amd64/consoles /etc/prometheus
            sudo cp -r prometheus-2.19.0.linux-amd64/console_libraries /etc/prometheus
            sudo cp prometheus-2.19.0.linux-amd64/promtool /usr/local/bin/
            rm -rf prometheus-2.19.0.linux-amd64.tar.gz prometheus-2.19.0.linux-amd64
            sudo bash -c 'echo "global:
              scrape_interval: 15s
              external_labels:
                monitor: 'prometheus'

            scrape_configs:
              - job_name: 'prometheus'
                static_configs:
                  - targets: ['localhost:9090']" > /etc/prometheus/prometheus.yml'
            sudo bash -c 'echo "[Unit]
            Description=Prometheus
            Wants=network-online.target
            After=network-online.target

            [Service]
            User=prometheus
            Group=prometheus
            Type=simple
            ExecStart=/usr/local/bin/prometheus \
                --config.file /etc/prometheus/prometheus.yml \
                --storage.tsdb.path /var/lib/prometheus/ \
                --web.console.templates=/etc/prometheus/consoles \
                --web.console.libraries=/etc/prometheus/console_libraries

            [Install]
            WantedBy=multi-user.target" > /etc/systemd/system/prometheus.service'
            sudo chown prometheus:prometheus /etc/prometheus
            sudo chown prometheus:prometheus /usr/local/bin/prometheus
            sudo chown prometheus:prometheus /usr/local/bin/promtool
            sudo chown -R prometheus:prometheus /etc/prometheus/consoles
            sudo chown -R prometheus:prometheus /etc/prometheus/console_libraries
            sudo chown -R prometheus:prometheus /var/lib/prometheus
            sudo systemctl daemon-reload
            sudo systemctl enable prometheus
            sudo systemctl start prometheus
